--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "nexxt",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@nivo/bar": "^0.79.1",
-    "@nivo/core": "^0.79.0",
-    "@testing-library/react": "^12.1.5",
-    "@types/react": "^17.0.47",
-    "@types/react-dom": "^17.0.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.4.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "react_nivo_d3",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@nivo/bar": "^0.79.1",
+		"@nivo/core": "^0.79.0",
+		"@testing-library/react": "^12.1.5",
+		"@types/react": "^17.0.47",
+		"@types/react-dom": "^17.0.17",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-scripts": "5.0.1",
+		"react-select": "^5.4.0",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
